ItemsForSale-style.css
body {
    margin: 0; /* Resets default margin, included as it helped with positioning issues I was experiencing  */
    padding: 0px; /* Resets default padding for the body*/
    display: flex; /* flexbox for layout */
    flex-direction: column;
    min-height: 100vh; /* min height is 100 percent of the viewport height */
    width: 100%; 
    overflow-x: hidden; /* used to hide horizontal scrollbar */
    
}

header {
    width: 100vw; /* width is 100 percent of the viewport width */
}

.navigation-bar {
    display: flex;
    justify-content: center; /* center align nav links */
    background-color: #333; /* background color for nav bar */
    margin: 0; 
    padding: 0; 
    width: 100vw; 
}

.nav-link {
    color: white; /* text color for each navigation link is white */
    text-align: center; /* text is center aligned */
    padding: 10px;
    font-family: Helvetica, Arial, sans-serif;
    text-decoration: none;
    width: 160px;

}

.navigation-bar a:hover {
    background-color: #ddd; /* when hovering over a nav link, its background color changes to white-ish gray*/
    color: black; /* when hovering over a nav link, text color is set to black for visability */
}

.navigation-bar a.active {
    background-color: #038e2d; /* active page's nav-link is green to signify to user that you are on that page */
    color: white;
}

.navigation-bar .icon {
    display: none;
}

.footer {
    margin-top: auto; /* pushes the footer to the bottom */
    display: flex;
    background-color: #333;
    color: white;
    justify-content: center; 
    align-items: center; 
    height: 35px;
    width: 100vw; 
}

.footer-item {
    color: white;
    margin: 20px;
}

#copyright{
    color: white;
    margin-right: auto; /* push copyright to the right */
    margin-left: 0; 
}



.item-grid {
    display: grid; /* display layout is set to grid */
    grid-template-columns: 1fr 1fr 1fr; /* three equal sized columns */
    grid-gap: 20px; /* gap between posts */
    width: 70%;
    padding-top: 4%;
    padding-left: 2%;
    overflow-x: auto;
    overflow-y: auto; /* vertical scrollbar if needed */
}

.item-post {
    border: 2.5px solid #038e2d; /* post border */
    border-radius: 8px; /* rounded corners for border */
    padding: 10px;
    width: 300px;
    height: 400px; 
    font-family: Helvetica, Arial, sans-serif;
    display: flex;
    flex-direction: column; /* vertical alignment */
    align-items: center; 
    justify-content: center; 
    text-align: center; /* text is centered in the posts */
}

.item-post img {
    width: 60%;
    max-width: 100%;
    height: auto; /* height is auto so ratio is maintained for images */
}

.item-post h3 {
    color: forestgreen;
    text-align: center;
}

.item-post p {
    font-size: 12px;
}

.flex-container {
    display: flex;
    flex-direction: row; /* setting flex direction to row */
    
}

.item-posting-form label, .item-posting-form input, .item-posting-form textarea {
    margin-bottom: 10px; /* bottom margin between form elements */
    display: block;
}

.item-posting-form{
    padding-top: 3%;
    flex: 1; /* same as flex 1 1 0  */
    align-items: center;
    justify-content: center;
    align-items: center;
    padding-left: 3%;
    font-family: Helvetica, Arial, sans-serif;
    color: forestgreen;
    font-weight: bold;
}

.searchbar-container {
    font-size: large;
    margin-top: 20%;
    font-family: Helvetica, Arial, sans-serif;
}

.image-gallery {
    display: flex;
    overflow-x: auto; /* horizontal scrollbar for images if neccessary, especially when multiple images are in gallery */
    width: 100%; 
    white-space: nowrap; 
    
}

.image-gallery img {
    max-width: 100%; 
    height: auto; /* images keep ratio when width changes */
    margin-right: 10px; 
    width: 60%;

}


button {
    border: 3px solid #333;
    background-color: #038e2d;
    color: white;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: bold;
    width: 25%;
    border-radius: 4px;
    cursor: pointer; /* changes cursor to pointer when hovering over the button */
    padding: 2px;
}

button:hover {
    background-color: #03611f;  /* makes the background color of the button slightly darker to help show that the button is clickable when hovered over */
}

